# test1

./: .env.example  .env.vercel.example  .gitignore  .tmp-test-api-routes.txt  DEPLOYMENT_STATUS.md  PRODUCTION_DEPLOYMENT.md  careers-apply.html  careers.html  hardware.html  index.html  main.js  package-lock.json  package.json  pre-registration.html  registration.html  server.js  software-ai-scientist.html  software-debugger.html  software-studio.html  software-vqpu.html  styles.css  vercel.json
Cloud Credit System/: 01-platform-analysis.md  02-credit-system-architecture.md  03-database-schema.sql  04-api-endpoints.md  05-implementation-blueprint.md
Cloud Credit System/frontend-demo/: README.md  app.js  index.html  mock-data.js  styles.css
Employee Portal/: app.js  package-lock.json  package.json  test-otp-smtp.js  trigger-prod-invite-final.js
Qaulium-studio Ide/: README.md  package-lock.json  package.json
Qaulium-studio Ide/backend-intern-starter/cpp/: CMakeLists.txt
Qaulium-studio Ide/backend-intern-starter/cpp/include/: bridge_router.hpp
Qaulium-studio Ide/backend-intern-starter/cpp/src/: bridge_router.cpp  rest_router_stub.cpp
Qstudio landing Apage/: index.html  styles.css
Qstudio landing Clone/: app.js
admin-page/: ADMIN_DASHBOARD_PRD.md  COMPONENT_GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  README.md  README_REDESIGN_COMPLETE.md  REDESIGN_README.md  app.js  index.html  styles.css  vercel.json
scripts/: build-public.js
tests/: admin-enterprise-integration.test.js  admin-rbac-matrix.test.js  api-route-smoke.test.js
(+120 files in other folders)
